[package]
name = "bbtk"
version = "0.1.0"
edition = "2021"
description = "collection of libraries"
documentation = "https://docs.rs/bbtk"
repository = "https://github.com/kakilangit/bbtk"
license = "MIT"
keywords = ["bbtk", "lib", "anyhow", "thiserror", "serde"]
authors = ["kakilangit <crates@kakilangit.dev>"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = [
    "alloc",
    "derive",
    "rc",
    "serde_derive",
] }
thiserror = "2.0"

[features]
serde = []
